# hierarchical_data

./: .gitignore  README.md  manage.py  pyproject.toml
hierarchical_data_app/: admin.py  models.py  views.py
hierarchical_data_app/migrations/: 0001_initial.py
hierarchical_data_server/: asgi.py  settings.py  urls.py  wsgi.py
templates/: files.html
